force-app/main/default/objects/BonusProjet__c/BonusProjet__c.object-meta.xml
<CustomObject>
    <description>Un objet requis par le configurateur</description>
    <label>Bonus Projet</label>
    <nameField>
        <label>Bonus Projet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bonus Projets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>