force-app/main/default/objects/BonusProjet__c/fields/Coefficientremise__c.field-meta.xml
<CustomField>
    <fullName>Coefficientremise__c</fullName>
    <description>Pourcentage de remise à appliquer sur la somme des lignes</description>
    <label>Coefficient remise</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>