force-app/main/default/objects/BonusProjet__c/fields/Datedapplication__c.field-meta.xml
<CustomField>
    <fullName>Datedapplication__c</fullName>
    <description>Date de la grille de bonus projet</description>
    <label>Date d&apos;application</label>
    <type>Date</type>
</CustomField>