force-app/main/default/objects/BonusProjet__c/fields/Montantplafond__c.field-meta.xml
<CustomField>
    <fullName>Montantplafond__c</fullName>
    <description>Montant plafond du pallier
GC_remise.rem_mtfin_ht</description>
    <label>Montant plafond</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>