force-app/main/default/objects/BonusProjet__c/fields/Montantplancher__c.field-meta.xml
<CustomField>
    <fullName>Montantplancher__c</fullName>
    <description>Montant plancher du pallier
GC_remise.rem_mtdeb_ht</description>
    <label>Montant plancher</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>