force-app/main/default/objects/BonusProjet__c/listViews/BP_2014.listView-meta.xml
<ListView>
    <fullName>BP_2014</fullName>
    <columns>idTiers__c</columns>
    <columns>Datedapplication__c</columns>
    <columns>Montantplancher__c</columns>
    <columns>Montantplafond__c</columns>
    <columns>Coefficientremise__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Datedapplication__c</field>
        <operation>greaterOrEqual</operation>
        <value>12/2/2014</value>
    </filters>
    <label>BP 2014</label>
    <language>fr</language>
</ListView>