force-app/main/default/objects/BonusProjet__c/listViews/BP_2019.listView-meta.xml
<ListView>
    <fullName>BP_2019</fullName>
    <columns>NAME</columns>
    <columns>Datedapplication__c</columns>
    <columns>Montantplancher__c</columns>
    <columns>Montantplafond__c</columns>
    <columns>Coefficientremise__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Datedapplication__c</field>
        <operation>equals</operation>
        <value>6/30/2020</value>
    </filters>
    <label>BP 2019</label>
</ListView>